feat(core): declare custom entity models
